test/Fail/Issue2127.err
Issue2127.agda:4.3-6.12: error: [Syntax.WrongContentBlock]
A data definition can only contain type signatures, possibly under
keyword instance
